<resources>
    <string name="app_name">Burpple Food Places</string>
    <string name="action_settings">Settings</string>
    <string name="featured">FEATURED</string>
    <string name="promotions">Promotions</string>
    <string name="latest">LATEST</string>
    <string name="burpple_guides">Burpple Guides</string>
    <string name="see_more">See More</string>
    <string name="burpple_new_and_trending"><![CDATA[New & Trending]]></string>
    <string name="newly_opened">Newly Opened</string>
    <string name="explore">Explore</string>
    <string name="explore_neighbourhoods">Explore Neighbourhoods</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="text_location">Location</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_search">Search</string>
    <string name="shop_name"><![CDATA[Wildfire Chicken & Burgers]]></string>
    <string name="shop_area">Hleden</string>
    <string name="promotion_duration">Till 31st Jan \'18</string>
    <string name="promotion_title">1-for-1 Shabu Burger</string>
    <string name="burpple_exclusive">BURPPLE EXCLUSIVE</string>
</resources>
